baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_throws/baml_tests__function_type_throws__02_parser__negative.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 13213
---
=== SYNTAX TREE ===
SOURCE_FILE
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "HiddenHandler"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Holder"
    L_BRACE "{"
    FIELD
      WORD "cb"
      TYPE_EXPR
        L_PAREN "("
        FUNCTION_TYPE_PARAM
          WORD "value"
          COLON ":"
          TYPE_EXPR "int"
            WORD "int"
        R_PAREN ")"
        ARROW "->"
        TYPE_EXPR "int"
          WORD "int"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "accept_hidden"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR "HiddenHandler"
          WORD "HiddenHandler"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "cb"
          CALL_ARGS "(1)"
            L_PAREN "("
            INTEGER_LITERAL "1"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "nested_position"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            TYPE_EXPR
              L_PAREN "("
              FUNCTION_TYPE_PARAM
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "inner"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "string"
                WORD "string"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "boom"
                    QUOTE """
                    WORD "boom"
                    QUOTE """
              R_BRACE "}"
        CALL_EXPR
          WORD "cb"
          CALL_ARGS "(inner)"
            L_PAREN "("
            WORD "inner"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "risky"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    THROWS_CLAUSE
      KW_THROWS "throws"
      TYPE_EXPR "string"
        WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        THROW_STMT
          THROW_EXPR
            KW_THROW "throw"
            STRING_LITERAL "boom"
              QUOTE """
              WORD "boom"
              QUOTE """
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "fail_hidden"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "accept_hidden"
          CALL_ARGS "(risky)"
            L_PAREN "("
            WORD "risky"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "fail_stored"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Holder"
      WORD "Holder"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Holder"
          L_BRACE "{"
          OBJECT_FIELD "cb: risky"
            WORD "cb"
            COLON ":"
            WORD "risky"
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "fail_returned"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "local"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "string"
                WORD "string"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "boom"
                    QUOTE """
                    WORD "boom"
                    QUOTE """
              R_BRACE "}"
        WORD "local"
        R_BRACE "}"

=== ERRORS ===
None
